--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
     "next": "16.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sweetalert2": "^11.26.2",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
